tools/error.txt
Run mkdir -p $GITHUB_WORKSPACE/build/usk
  mkdir -p $GITHUB_WORKSPACE/build/usk
  cd $GITHUB_WORKSPACE/build/usk
  cmake $GITHUB_WORKSPACE/usk
  make
  python3 $GITHUB_WORKSPACE/usk/prepare.py
  cd $GITHUB_WORKSPACE
  shell: /usr/bin/bash -e {0}
  env:
    FORCE_JAVASCRIPT_ACTIONS_TO_NODE24: true
    PICO_SDK_PATH: /home/runner/work/usk/usk/pico-sdk
Using PICO_SDK_PATH from environment ('/home/runner/work/usk/usk/pico-sdk')
PICO_SDK_PATH is /home/runner/work/usk/usk/pico-sdk
Defaulting platform (PICO_PLATFORM) to 'rp2040' since not specified.
Defaulting target board (PICO_BOARD) to 'pico' since not specified.
Using board configuration from /home/runner/work/usk/usk/pico-sdk/src/boards/include/boards/pico.h
Pico Platform (PICO_PLATFORM) is 'rp2040'.
Defaulting compiler (PICO_COMPILER) to 'pico_arm_cortex_m0plus_gcc' since not specified.
Configuring toolchain based on PICO_COMPILER 'pico_arm_cortex_m0plus_gcc'
Defaulting PICO_GCC_TRIPLE to 'arm-none-eabi'
-- The C compiler identification is GNU 13.2.1
-- The CXX compiler identification is GNU 13.2.1
-- The ASM compiler identification is GNU
-- Found assembler: /usr/bin/arm-none-eabi-gcc
-- Detecting C compiler ABI info
-- Detecting C compiler ABI info - done
-- Check for working C compiler: /usr/bin/arm-none-eabi-gcc - skipped
-- Detecting C compile features
-- Detecting C compile features - done
-- Detecting CXX compiler ABI info
-- Detecting CXX compiler ABI info - done
-- Check for working CXX compiler: /usr/bin/arm-none-eabi-g++ - skipped
-- Detecting CXX compile features
-- Detecting CXX compile features - done
Build type is MinSizeRel
-- Found Python3: /usr/bin/python3.12 (found version "3.12.3") found components: Interpreter
TinyUSB available at /home/runner/work/usk/usk/pico-sdk/lib/tinyusb/hw/bsp/rp2040; enabling build support for USB.
BTstack available at /home/runner/work/usk/usk/pico-sdk/lib/btstack
cyw43-driver available at /home/runner/work/usk/usk/pico-sdk/lib/cyw43-driver
mbedtls available at /home/runner/work/usk/usk/pico-sdk/lib/mbedtls
lwIP available at /home/runner/work/usk/usk/pico-sdk/lib/lwip
CMake Warning at /home/runner/work/usk/usk/pico-sdk/tools/Findpicotool.cmake:30 (message):
  No installed picotool with version 2.1.1 found - building from source

  It is recommended to build and install picotool separately, or to set
  PICOTOOL_FETCH_FROM_GIT_PATH to a common directory for all your SDK
  projects
Call Stack (most recent call first):
  /home/runner/work/usk/usk/pico-sdk/tools/CMakeLists.txt:168 (find_package)
  /home/runner/work/usk/usk/pico-sdk/tools/CMakeLists.txt:688 (pico_init_picotool)
  /home/runner/work/usk/usk/pico-sdk/src/cmake/on_device.cmake:81 (picotool_postprocess_binary)
  CMakeLists.txt:44 (pico_add_extra_outputs)


Downloading Picotool
Using picotool from /home/runner/work/usk/usk/build/usk/_deps/picotool/picotool
-- Configuring done (1.1s)
-- Generating done (0.1s)
-- Build files have been written to: /home/runner/work/usk/usk/build/usk
[  0%] Built target picotoolForceReconfigure
[  1%] Creating directories for 'picotoolBuild'
[  2%] No download step for 'picotoolBuild'
[  3%] No update step for 'picotoolBuild'
[  4%] No patch step for 'picotoolBuild'
[  5%] Performing configure step for 'picotoolBuild'
Not searching for unused variables given on the command line.
-- The C compiler identification is GNU 13.3.0
-- The CXX compiler identification is GNU 13.3.0
-- Detecting C compiler ABI info
-- Detecting C compiler ABI info - done
-- Check for working C compiler: /usr/bin/cc - skipped
-- Detecting C compile features
-- Detecting C compile features - done
-- Detecting CXX compiler ABI info
-- Detecting CXX compiler ABI info - done
-- Check for working CXX compiler: /usr/bin/c++ - skipped
-- Detecting CXX compile features
-- Detecting CXX compile features - done
-- Using the single-header code from /home/runner/work/usk/usk/build/usk/_deps/picotool-src/lib/nlohmann_json/single_include/
PICOTOOL_NO_LIBUSB is set - no USB support will be built
-- Configuring done (0.3s)
-- Generating done (0.0s)
-- Build files have been written to: /home/runner/work/usk/usk/build/usk/_deps/picotool-build
[  6%] Performing build step for 'picotoolBuild'
-- The C compiler identification is GNU 13.3.0
-- The CXX compiler identification is GNU 13.3.0
-- The ASM compiler identification is GNU
-- Found assembler: /usr/bin/cc
-- Detecting C compiler ABI info
-- Detecting C compiler ABI info - done
-- Check for working C compiler: /usr/bin/cc - skipped
-- Detecting C compile features
-- Detecting C compile features - done
-- Detecting CXX compiler ABI info
-- Detecting CXX compiler ABI info - done
-- Check for working CXX compiler: /usr/bin/c++ - skipped
-- Detecting CXX compile features
-- Detecting CXX compile features - done
Using precompiled enc_bootloader.elf
-- Configuring done (0.3s)
-- Generating done (0.0s)
-- Build files have been written to: /home/runner/work/usk/usk/build/usk/_deps/picotool-build/enc_bootloader
[  7%] Built target enc_bootloader
-- The C compiler identification is GNU 13.3.0
-- The CXX compiler identification is GNU 13.3.0
-- The ASM compiler identification is GNU
-- Found assembler: /usr/bin/cc
-- Detecting C compiler ABI info
-- Detecting C compiler ABI info - done
-- Check for working C compiler: /usr/bin/cc - skipped
-- Detecting C compile features
-- Detecting C compile features - done
-- Detecting CXX compiler ABI info
-- Detecting CXX compiler ABI info - done
-- Check for working CXX compiler: /usr/bin/c++ - skipped
-- Detecting CXX compile features
-- Detecting CXX compile features - done
Using precompiled enc_bootloader.elf
-- Configuring done (0.3s)
-- Generating done (0.0s)
-- Build files have been written to: /home/runner/work/usk/usk/build/usk/_deps/picotool-build/enc_bootloader_mbedtls
[ 14%] Built target enc_bootloader_mbedtls
[ 16%] Built target errors
[ 18%] Built target elf
[ 86%] Built target mbedtls
[ 88%] Built target bintool
[ 90%] Built target embedded_data_no_libusb
[ 92%] Built target elf2uf2
[100%] Built target picotool
[  7%] Performing install step for 'picotoolBuild'
[  7%] Built target enc_bootloader
[ 14%] Built target enc_bootloader_mbedtls
[ 16%] Built target errors
[ 18%] Built target elf
[ 86%] Built target mbedtls
[ 88%] Built target bintool
[ 90%] Built target embedded_data_no_libusb
[ 92%] Built target elf2uf2
[100%] Built target picotool
Install the project...
-- Install configuration: "Release"
[  8%] Performing test step for 'picotoolBuild'
picotool v2.2.0 (Linux, GNU-13.3.0, Release)

This version of picotool was compiled without USB support. Some commands are not available.
[  9%] Completed 'picotoolBuild'
[  9%] Built target picotoolBuild
[ 10%] Creating directories for 'pioasmBuild'
[ 11%] No download step for 'pioasmBuild'
[ 12%] No update step for 'pioasmBuild'
[ 13%] No patch step for 'pioasmBuild'
[ 14%] Performing configure step for 'pioasmBuild'
Not searching for unused variables given on the command line.
loading initial cache file /home/runner/work/usk/usk/build/usk/pico-sdk/src/rp2_common/pico_cyw43_driver/pioasm/tmp/pioasmBuild-cache-MinSizeRel.cmake
-- The CXX compiler identification is GNU 13.3.0
-- Detecting CXX compiler ABI info
-- Detecting CXX compiler ABI info - done
-- Check for working CXX compiler: /usr/bin/c++ - skipped
-- Detecting CXX compile features
-- Detecting CXX compile features - done
-- Configuring done (0.2s)
-- Generating done (0.0s)
-- Build files have been written to: /home/runner/work/usk/usk/build/usk/pioasm
[ 15%] Performing build step for 'pioasmBuild'
[100%] Built target pioasm
[ 17%] Performing install step for 'pioasmBuild'
[100%] Built target pioasm
Install the project...
-- Install configuration: "Release"
[ 18%] Completed 'pioasmBuild'
[ 18%] Built target pioasmBuild
[ 19%] Generating /home/runner/work/usk/usk/usk/generated/ws2812.pio.h
[ 19%] Built target usk_ws2812_pio_h
[ 20%] Generating /home/runner/work/usk/usk/usk/generated/emmc.pio.h
[ 20%] Built target usk_emmc_pio_h
[ 21%] Building C object CMakeFiles/usk.dir/main.c.o
[ 22%] Building C object CMakeFiles/usk.dir/board_detect.c.o
[ 23%] Building C object CMakeFiles/usk.dir/fuses.c.o
[ 24%] Building C object CMakeFiles/usk.dir/pio_upload.c.o
[ 25%] Building C object CMakeFiles/usk.dir/boot_detect.c.o
[ 26%] Building C object CMakeFiles/usk.dir/config.c.o
[ 27%] Building C object CMakeFiles/usk.dir/misc.c.o
[ 28%] Building C object CMakeFiles/usk.dir/payload.c.o
/home/runner/work/usk/usk/usk/payload.c: In function 'fast_check':
/home/runner/work/usk/usk/usk/payload.c:607:16: error: invalid use of undefined type 'struct fw_info'
  607 |         if (fwi->signature == 0x9cabe959) {
      |                ^~
/home/runner/work/usk/usk/usk/payload.c:608:34: error: invalid use of undefined type 'struct fw_info'
  608 |             uint32_t stored = fwi->bct_sub_fingerprint;
      |                                  ^~
make[2]: *** [CMakeFiles/usk.dir/build.make:177: CMakeFiles/usk.dir/payload.c.o] Error 1
make[1]: *** [CMakeFiles/Makefile2:2309: CMakeFiles/usk.dir/all] Error 2
make: *** [Makefile:91: all] Error 2
Error: Process completed with exit code 2.